del: unused file

--- a/package.json
+++ b/package.json
@@ -3,5 +3,5 @@
   "description": "Different little tools.",
   "version": "0.0.1",
   "unity": "2022.3",
-  "displayName": "Tools"
+  "displayName": "Unity Tools"
 }
